# controllers/user_controller.go
@@ -12,8 +12,8 @@ import (
 )
 
 type UserController struct {
-	services.UserService
-	services.ProfileService
+	userService    services.UserService
+	profileService services.ProfileService
 }
 
 func NewUserController(userService *services.UserService, profileService *services.ProfileService) *UserController {
@@ -39,7 +39,7 @@ func (controller *UserController) Register(c *gin.Context) {
 	err := c.ShouldBindJSON(&registerReq)
 	utils.PanicIfError(err)
 
-	res, err := controller.UserService.Register(c, &registerReq)
+	res, err := controller.userService.Register(c, &registerReq)
 	utils.PanicIfError(err)
 
 	utils.ToResponseJSON(c, http.StatusCreated, res, nil)
@@ -62,7 +62,7 @@ func (controller *UserController) Login(c *gin.Context) {
 	err := c.ShouldBindJSON(&loginReq)
 	utils.PanicIfError(err)
 
-	res, err := controller.UserService.Login(c, &loginReq)
+	res, err := controller.userService.Login(c, &loginReq)
 	utils.PanicIfError(err)
 
 	utils.ToResponseJSON(c, http.StatusOK, res, nil)
@@ -83,7 +83,7 @@ func (controller *UserController) ForgotPassword(c *gin.Context) {
 	err := c.ShouldBindJSON(&forgotPasswordReq)
 	utils.PanicIfError(err)
 
-	res, err := controller.UserService.ForgotPassword(c, &forgotPasswordReq)
+	res, err := controller.userService.ForgotPassword(c, &forgotPasswordReq)
 	utils.PanicIfError(err)
 
 	utils.ToResponseJSON(c, http.StatusOK, res, nil)
@@ -107,7 +107,7 @@ func (controller *UserController) ResetPassword(c *gin.Context) {
 	err := c.ShouldBindJSON(&resetPasswordReq)
 	utils.PanicIfError(err)
 
-	err = controller.UserService.ResetPassword(c, &resetPasswordReq)
+	err = controller.userService.ResetPassword(c, &resetPasswordReq)
 	utils.PanicIfError(err)
 
 	utils.ToResponseJSON(c, http.StatusOK, "password updated", nil)
@@ -129,7 +129,7 @@ func (controller *UserController) GetCurrentUser(c *gin.Context) {
 	claims, err := utils.ExtractTokenClaims(c)
 	utils.PanicIfError(err)
 
-	res, err := controller.UserService.GetCurrentUser(c, uint(claims.UserID))
+	res, err := controller.userService.GetCurrentUser(c, uint(claims.UserID))
 	utils.PanicIfError(err)
 
 	utils.ToResponseJSON(c, http.StatusOK, res, nil)
@@ -140,13 +140,15 @@ func (controller *UserController) GetCurrentUser(c *gin.Context) {
 // @Description Update user profile.
 // @Tags Users
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Param Body body request.ProfileUpdateRequest true "the body to reset password"
 // @Security BearerToken
 // @Produce json
 // @Success 200 {object} web.WebSuccess[response.ProfileResponse]
 // @Failure 404 {object} web.WebNotFoundError
 // @Failure 400 {object} web.WebBadRequestError
+// @Failure 401 {object} web.WebUnauthorizedError
 // @Failure 500 {object} web.WebInternalServerError
-// @Router /api/users/profile [get]
+// @Router /api/users/profile [patch]
 func (controller *UserController) UpdateUserProfile(c *gin.Context) {
 	var profileUpdateReq request.ProfileUpdateRequest
 
@@ -156,8 +158,26 @@ func (controller *UserController) UpdateUserProfile(c *gin.Context) {
 	claims, err := utils.ExtractTokenClaims(c)
 	utils.PanicIfError(err)
 
-	res, err := controller.ProfileService.UpdateProfile(c, &profileUpdateReq, uint(claims.UserID))
+	res, err := controller.profileService.UpdateProfile(c, &profileUpdateReq, uint(claims.UserID))
 	utils.PanicIfError(err)
 
 	utils.ToResponseJSON(c, http.StatusOK, res, nil)
+}
+
+// Find user profile godoc
+// @Summary Find user profile.
+// @Description Find a user profile by username.
+// @Tags Users
+// @Param username path string true "username"
+// @Produce json
+// @Success 200 {object} web.WebSuccess[response.ProfileResponse]
+// @Failure 404 {object} web.WebNotFoundError
+// @Failure 500 {object} web.WebInternalServerError
+// @Router /api/users/profile/{username} [get]
+func (controller *UserController) FindProfileByUsername(c *gin.Context) {
+
+	car, err := controller.profileService.FindProfileByUsername(c, c.Param("username"))
+	utils.PanicIfError(err)
+
+	utils.ToResponseJSON(c, http.StatusOK, car, nil)
 }
